tests/errors/stack_overflow.s

main:
    pushf 1.0
    jmp main

